Adding nodeSelectors to helm contributed in #6817

--- a/etc/helm/pachyderm/values.yaml
+++ b/etc/helm/pachyderm/values.yaml
@@ -77,6 +77,9 @@ etcd:
     repository: "pachyderm/etcd"
     tag: "v3.3.5"
     pullPolicy: "IfNotPresent"
+  # maxTxnOps sets the --max-txn-ops in the container args
+  maxTxnOps: 10000
+  nodeSelector: {}
   # podLabels specifies labels to add to the etcd pod.
   podLabels: {}
   # resources specifies the resource request and limits
@@ -109,6 +112,7 @@ etcd:
     type: ClusterIP
   securityContext:
     enabled: true
+  tolerations: {}
 
 enterpriseServer:
   enabled: false
@@ -179,9 +183,12 @@ pachd:
     enabled: true
     # endpoint should be the URL of the metrics endpoint.
     endpoint: ""
+  nodeSelector: {}
   # podLabels specifies labels to add to the pachd pod.
   podLabels: {}
   # resources specifies the resource requests and limits
+  # replicas sets the number of pachd running pods
+  replicas: 1 
   resources: {}
     #limits:
     #  cpu: "1"
@@ -360,6 +367,7 @@ pachd:
       create: false
       crt: ""
       key: ""
+  tolerations: {}
   worker:
     image:
       repository: "pachyderm/worker"
